--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bcryptjs":"^2.4.3",
     "jsonwebtoken":"^8.5.1",
     "dotenv":"^8.2.0",
-    "cookie-parser":"^1.4.5"
+    "cookie-parser":"^1.4.5",
+    "uuid":"^8.3.2"
   },
   "devDependencies":{
     "morgan":"^1.10.0",
