--- a/package.json
+++ b/package.json
@@ -45,5 +45,6 @@
     "morgan":"^1.10.0",
     "nodemon":"^2.0.6",
     "concurrently":"^5.3.0"
-  }
+  },
+  "author":"Rafael Eduardo Contreras"
 }
