--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom":"^5.2.0",
     "axios":"^0.21.0",
     "socket.io":"^3.0.4",
+    "socket.io-client":"^3.0.4",
     "mongoose":"^5.11.5",
     "bcryptjs":"^2.4.3",
     "jsonwebtoken":"^8.5.1"
