--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "socket.io-client":"^3.0.4",
     "mongoose":"^5.11.5",
     "bcryptjs":"^2.4.3",
-    "jsonwebtoken":"^8.5.1"
+    "jsonwebtoken":"^8.5.1",
+    "dotenv":"^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
