--- a/api/package.json
+++ b/api/package.json
@@ -9,5 +9,19 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies":{
+    "socket.io":"^3.0.4",
+    "cors":"^2.8.5",
+    "express":"^4.17.1",
+    "mongoose":"^5.11.5",
+    "bcryptjs":"^2.4.3",
+    "jsonwebtoken":"^8.5.1",
+    "dotenv":"^8.2.0",
+    "cookie-parser":"^1.4.5"
+  },
+  "devDependencies":{
+    "morgan":"^1.10.0",
+    "nodemon":"^2.0.6"
+  }
 }
