--- a/package.json
+++ b/package.json
@@ -10,16 +10,9 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4",
-    "cors":"^2.8.5",
-    "express":"^4.17.1",
     "react-router-dom":"^5.2.0",
     "axios":"^0.21.0",
-    "socket.io":"^3.0.4",
-    "socket.io-client":"^3.0.4",
-    "mongoose":"^5.11.5",
-    "bcryptjs":"^2.4.3",
-    "jsonwebtoken":"^8.5.1",
-    "dotenv":"^8.2.0"
+    "socket.io-client":"^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,9 +37,8 @@
     ]
   },
   "devDependencies": {
-    "morgan":"^1.10.0",
-    "nodemon":"^2.0.6",
     "concurrently":"^5.3.0"
   },
-  "author":"Rafael Eduardo Contreras"
+  "author":"Rafael Eduardo Contreras",
+  "proxy": "http://localhost:3001"
 }
