--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-node_modules
-src/vendor
+
+api/node_modules
+client/node_modules
+client/public/fontawesome
 .eslintcache
-public/fontawesome
 build
