--- a/package.json
+++ b/package.json
@@ -1,44 +1,32 @@
 {
-  "name": "myreactapp",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "react-router-dom":"^5.2.0",
-    "axios":"^0.21.0",
-    "socket.io-client":"^3.0.4"
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {   
+    "client-install": "npm install --prefix client",
+    "start": "node index.js",    
+    "server": "nodemon index.js",    
+    "client": "npm start --prefix client",    
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev-test":"cd api && nodemon",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "dev": "\"concurrently \"cd api && npm run start\" \"npm run start\"",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies":{
+    "socket.io":"^3.0.4",
+    "cors":"^2.8.5",
+    "express":"^4.17.1",
+    "mongoose":"^5.11.5",
+    "bcryptjs":"^2.4.3",
+    "jsonwebtoken":"^8.5.1",
+    "dotenv":"^8.2.0",
+    "cookie-parser":"^1.4.5"
   },
-  "eslintConfig": {
-    
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "concurrently":"^5.3.0"
-  },
-  "author":"Rafael Eduardo Contreras",
-  "proxy": "http://localhost:3001"
+  "devDependencies":{
+    "morgan":"^1.10.0",
+    "nodemon":"^2.0.6"
+  }
 }
