--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "server": "nodemon index.js",    
     "client": "npm start --prefix client",    
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "dev-test":"cd api && nodemon",
     "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
@@ -28,5 +27,6 @@
   "devDependencies":{
     "morgan":"^1.10.0",
     "nodemon":"^2.0.6"
-  }
+  },
+  "homepage": "."
 }
