--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ ACCESS_JWT = secret
 REFRESH_JWT = refresh_secret
 PORT = 3001
 ONE_HOUR = 3600000
-NODE_ENV = dev
+NODE_ENV = production
+MONGO_URI=mongodb+srv://Rafael:Rcontre360**@oficial.p93w1.mongodb.net/chat_application?retryWrites=true&w=majority
