--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken":"^8.5.1",
     "dotenv":"^8.2.0",
     "cookie-parser":"^1.4.5",
-    "uuid":"^8.3.2"
+    "uuid":"^8.3.2",
+    "express-validator":"^6.8.0"
   },
   "devDependencies":{
     "morgan":"^1.10.0",
