--- a/api/package.json
+++ b/api/package.json
@@ -3,31 +3,31 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {   
+  "scripts": {
     "client-install": "npm install --prefix client",
-    "start": "node index.js",    
-    "server": "nodemon index.js",    
-    "client": "npm start --prefix client",    
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm start --prefix client",
     "dev": "concurrently \"npm run api\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies":{
-    "socket.io":"^3.0.4",
-    "cors":"^2.8.5",
-    "express":"^4.17.1",
-    "mongoose":"^5.11.5",
-    "bcryptjs":"^2.4.3",
-    "jsonwebtoken":"^8.5.1",
-    "dotenv":"^8.2.0",
-    "cookie-parser":"^1.4.5",
-    "uuid":"^8.3.2",
-    "express-validator":"^6.8.0"
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.9.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.11.5",
+    "socket.io": "^3.0.4",
+    "uuid": "^8.3.2"
   },
-  "devDependencies":{
-    "morgan":"^1.10.0",
-    "nodemon":"^2.0.6"
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.6"
   },
   "homepage": "."
 }
