deploy urls mongodb

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
-ACCESS_JWT = secret
-REFRESH_JWT = refresh_secret
-PORT = 3001
-ONE_HOUR = 3600000
-NODE_ENV = dev
-MONGO_URI=mongodb://localhost:27017/chat_application
+ACCESS_JWT=secret
+REFRESH_JWT=refresh_secret
+PORT=3001
+ONE_HOUR=3600000
+NODE_ENV=production
+MONGO_URI=mongodb+srv://Rafael:Rcontre360**@oficial.p93w1.mongodb.net/chat_application?retryWrites=true&w=majority
