--- a/api/.env
+++ b/api/.env
@@ -4,8 +4,5 @@ REFRESH_JWT=refresh_secret
 PORT=3001
 ONE_HOUR=3600000
 NODE_ENV=production
-MONGO_URI=mongodb://localhost:27017/chat_application
-
-
-
-aux=mongodb+srv://Rafael:Rcontre360**@oficial.p93w1.mongodb.net/chat_application?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://Rafael:Rcontre360**@oficial.p93w1.mongodb.net/chat_application?retryWrites=true&w=majority
+aux=mongodb://localhost:27017/chat_application
